; ModuleID = '/home/carl/AnghaBench/git/extr_unix-socket.c_unix_stream_socket.c'
source_filename = "/home/carl/AnghaBench/git/extr_unix-socket.c_unix_stream_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_UNIX = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"unable to create socket\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @unix_stream_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unix_stream_socket() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @AF_UNIX, align 4
  %3 = load i32, i32* @SOCK_STREAM, align 4
  %4 = call i32 @socket(i32 %2, i32 %3, i32 0)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @die_errno(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @die_errno(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
